--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,12 +1,10 @@
 
 <span class="govuk-caption-l">
-    {% if isAddCourtCase %}
-        {% if courtAppearance.warrantType === 'SENTENCING' %}
-            Add sentences to a court case
-        {% else %}
-            Add offences to a court case
-        {% endif %}
+    {% if offence.sentence.countNumber %}
+        Add sentence information for count {{ offence.sentence.countNumber }}
+    {% elif isAddCourtCase %}
+        Add a court case
     {% else %}
-        Add an appearance to court case {{ courtCaseUniqueIdentifier }}
+        Add an appearance to court case
     {% endif %}
 </span>
