RASS-126 update delete offence page to new layout, validation

--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,6 +1,6 @@
 
 <span class="govuk-caption-l">
-    {% if offence.sentence.countNumber %}
+    {% if offence.sentence.countNumber and not isDeleteOffence %}
         Add sentence information for count {{ offence.sentence.countNumber }}
     {% elif isAddCourtCase %}
         Add a court case
