--- a/server/views/pages/offence/delete-offence.njk
+++ b/server/views/pages/offence/delete-offence.njk
@@ -1,9 +1,13 @@
-{% extends "../../partials/prisonerBannerLayout.njk" %}
+{% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "../../components/offenceCard/macro.njk" import offenceCard %}
 
-{% set pageTitle = applicationName + " - Delete an offence" %}
+{% set offenceSentence = 'sentence' if courtAppearance.warrantType === 'SENTENCING' else 'offence' %}
+
+{% set isDeleteOffence = true %}
+
+{% set pageTitle = applicationName + " - Delete an " + offenceSentence %}
 
 
 {% set hintHtml %}
@@ -17,12 +21,16 @@
             countNumber: offence.sentence.countNumber,
             terrorRelated: offence.terrorRelated,
             isSentenced: offence.sentence,
-            custodialSentenceLength: offence.sentence.custodialSentenceLength
+            custodialSentenceLength: offence.sentence.custodialSentenceLength,
+            licencePeriodLength: offence.sentence.licencePeriodLength,
+            sentenceServeType: offence.sentence.sentenceServeType,
+            consecutiveTo: offence.sentence.consecutiveTo
         })
     }}
 {% endset %}
 
 {% block content %}
+    {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/appearance/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-delete-offence">
@@ -33,11 +41,12 @@
                     name: "deleteOffence",
                     fieldset: {
                         legend: {
-                            text: "Are you sure you want to delete this offence?",
+                            text: "Are you sure you want to delete this " + offenceSentence + "?",
                             isPageHeading: true,
                             classes: "govuk-fieldset__legend--l"
                         }
                     },
+                    errorMessage:  errors | findError('deleteOffence'),
                     hint: {
                         html: hintHtml
                     },
