--- a/server/views/pages/offence/sentence-serve-type.njk
+++ b/server/views/pages/offence/sentence-serve-type.njk
@@ -39,6 +39,7 @@
                 {% include "../../partials/offenceCaption.njk" %}
 
                 {{ govukRadios({
+                    id: "sentenceServeType",
                     name: "sentenceServeType",
                     fieldset: {
                         legend: {
