--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -63,27 +63,29 @@
                         }
                     ]
                 }) }}
-                <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-                <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences</h2>
-                {{ govukSummaryList({
-                    classes: "govuk-summary-list--no-border offences-summary-card-content",
-                    rows: [
-                        {
-                            key: {
-                                text: "Offences added"
-                            },
-                            value: {
-                                text: offences | length
-                            },
-                            classes: "offences-summary-card-offence-details-row"
-                        }
-                    ]
-                }) }}
-                {% if offences | length %}
-                {{ govukDetails({
-                    summaryText: "Show Offences",
-                    html: offenceDetailHtml
-                }) }}
+                {% if courtAppearance.warrantType === 'REMAND' or offences | length %}
+                    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                    <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences</h2>
+                    {{ govukSummaryList({
+                        classes: "govuk-summary-list--no-border offences-summary-card-content",
+                        rows: [
+                            {
+                                key: {
+                                    text: "Offences added"
+                                },
+                                value: {
+                                    text: offences | length
+                                },
+                                classes: "offences-summary-card-offence-details-row"
+                            }
+                        ]
+                    }) }}
+                    {% if offences | length %}
+                    {{ govukDetails({
+                        summaryText: "Show Offences",
+                        html: offenceDetailHtml
+                    }) }}
+                    {% endif %}
                 {% endif %}
                 {% if courtAppearance.warrantType === 'SENTENCING'%}
                     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
