RASS-205 added scaffolding for edit offence/sentence

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -110,17 +110,12 @@
 
 {% if courtAppearance.overallSentenceLength %}
 
-{% set overallSentenceLengthValue = '' %}
-    {% for order in courtAppearance.overallSentenceLength.periodOrder %}
-        {% set overallSentenceLengthValue = overallSentenceLengthValue + ' ' + courtAppearance.overallSentenceLength[order] + ' ' + order %}
-    {% endfor %}
-
     {% set checkAnswersRows = (checkAnswersRows.push({
                             key: {
                             text: "Overall sentence length"
                         },
                             value: {
-                            text: overallSentenceLengthValue
+                            text: courtAppearance.overallSentenceLength | formatLengths
                         },
                             actions: {
                             items: [
