--- a/server/views/components/offenceCard/template.njk
+++ b/server/views/components/offenceCard/template.njk
@@ -7,6 +7,13 @@
                     },
                     value: {
                         text: params.offenceStartDate | formatDate + (" to " + params.offenceEndDate | formatDate if params.offenceEndDate else '')
+                    },
+                    actions: {
+                        items: ([{
+                            href: "/person/" +  params.nomsId + "/" + params.addOrEditCourtCase + "/" + params.courtCaseReference + "/appearance/ " + params.appearanceReference + "/offences/" + params.offenceReference + "/offence-date?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "commited on"
+                        }] if params.canEdit else [])
                     }
                 },
                 {
@@ -15,7 +22,14 @@
                 },
                     value: {
                     text: params.outcome
-                }
+                },
+                    actions: {
+                        items: ([{
+                            href: "/person/" +  params.nomsId + "/" + params.addOrEditCourtCase + "/" + params.courtCaseReference + "/appearance/ " + params.appearanceReference + "/offences/" + params.offenceReference + "/offence-outcome?submitToEditOffence=true",
+                            text: "Edit",
+                            visuallyHiddenText: "outcome"
+                        }] if params.canEdit else [])
+                    }
                 }
             ]-%}
 
@@ -31,33 +45,25 @@
 {% endif %}
 
 {% if params.custodialSentenceLength %}
-    {% set sentenceLengthValue = '' %}
-    {% for order in params.custodialSentenceLength.periodOrder %}
-        {% set sentenceLengthValue = sentenceLengthValue + ' ' + params.custodialSentenceLength[order] + ' ' + order %}
-    {% endfor %}
 
     {% set summaryListRows = (summaryListRows.push({
                     key: {
                     text: "Sentence length"
                 },
                     value: {
-                    text: sentenceLengthValue
+                    text: params.custodialSentenceLength | formatLengths
                 }
                 }), summaryListRows)%}
 {% endif %}
 
 {% if params.licencePeriodLength %}
-    {% set licencePeriodLengthValue = '' %}
-    {% for order in params.licencePeriodLength.periodOrder %}
-        {% set licencePeriodLengthValue = licencePeriodLengthValue + ' ' + params.licencePeriodLength[order] + ' ' + order %}
-    {% endfor %}
 
     {% set summaryListRows = (summaryListRows.push({
                     key: {
                     text: "Licence period"
                 },
                     value: {
-                    text: licencePeriodLengthValue
+                    text: params.licencePeriodLength | formatLengths
                 }
                 }), summaryListRows)%}
 {% endif %}
@@ -79,20 +85,23 @@
 
 
 
-<div class="offence-card {% if params.isSentenced %} sentence-card {% endif %}">
+<div class="offence-card {% if params.isSentenced %} sentence-card {% endif %} {% if params.canEdit %} offence-card-edit {% endif %}">
     <div class="offence-card-offence-details">
         {% if params.countNumber %}
             <span class="govuk-body-s">Count {{ params.countNumber }}</span>
         {% endif %}
-        <h4 class="govuk-heading-s">
+        <h4 class="govuk-heading-s offence-name">
             {{ params.offenceCode }} {{ params.offenceName }}
             {% if params.terrorRelated %}
                 <br>
                 <strong class="govuk-tag govuk-!-margin-top-2">
                     Terror-related
                 </strong>
-            {% endif %}    
+            {% endif %}
         </h4>
+        {% if params.canEdit %}   
+            <div class="offence-name-edit"><a class="govuk-link" href="/person/{{ params.nomsId }}/{{ params.addOrEditCourtCase}}/{{ params.courtCaseReference}}/appearance/{{ params.appearanceReference}}/offences/{{ params.offenceReference}}/offence-code?submitToEditOffence=true">Edit<span class="govuk-visually-hidden"> offence name</span></a></div>
+        {% endif %} 
 
         {{ govukSummaryList({
             classes: "govuk-summary-list--no-border",
