--- a/server/views/pages/offence/count-number.njk
+++ b/server/views/pages/offence/count-number.njk
@@ -26,7 +26,8 @@
                         },
                         id: "count-number",
                         name: "countNumber",
-                        classes: "govuk-input--width-5"
+                        classes: "govuk-input--width-5",
+                        value: countNumber
                     }) }} 
 
                 {% endcall %}
